--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,27 @@ local.properties
 application.properties
 
 # End of https://www.gitignore.io/api/eclipse
+
+
+
+### JS
+PI keys and secrets
+.env
+
+# Dependency directory
+node_modules
+bower_components
+config
+
+# Editors
+.idea
+*.iml
+
+# OS metadata
+.DS_Store
+Thumbs.db
+
+uploads
+
+**/build/**
+**/public/**
