Feature : Add social logins on Google and Naver

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Created by https://www.gitignore.io/api/eclipse
+ Created by https://www.gitignore.io/api/eclipse
 # Edit at https://www.gitignore.io/?templates=eclipse
 
 ### Eclipse ###
@@ -74,7 +74,13 @@ application.properties
 
 # End of https://www.gitignore.io/api/eclipse
 
-
+### VSC
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
 
 ### JS
 PI keys and secrets
