--- a/.classpath
+++ b/.classpath
@@ -29,7 +29,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/0.encore/00.lib/ojdbc6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Playdata/Downloads/lombok.jar"/>
 	<classpathentry kind="lib" path="C:/0.encore/00.lib/mariadb-java-client-2.5.2-sources.jar"/>
 	<classpathentry kind="src" path="target/generated-sources/annotations">
 		<attributes>
@@ -38,9 +37,10 @@
 	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="target/generated-test-sources/test-annotations">
 		<attributes>
-			<attribute name="optional" value="true"/>
 			<attribute name="test" value="true"/>
+			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/0.encore/00.SW/lombok.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
